# 1M-Context-Sol

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
PLANNING/: 1M-CONTEXT-SOL-LINUX-PASEO-ADDENDUM.md  1M-CONTEXT-TICKER-DESKTOP-RELEASE-ADDENDUM.md  1M-CONTEXT-TICKER-MACOS-DMG-ADDENDUM.md  CODEX-CONTEXT-CONTINUUM-PSPR.md  CODEX-DESKTOP-SOL-1M-OVERLAY-ADDENDUM.md  CODEX-DESKTOP-SOL-1M-PSPR.md
contracts/: architecture-boundaries.json  capability-vocabulary.json  evidence-schema-map.json
docs/: CI-AND-EVIDENCE-CONTRACT.md  LINUX-PASEO.md  MACOS.md  VERIFICATION.md
docs/architecture/: ATOMIC-CONFIG-MANAGEMENT.md  CLAIM-CONTRACT.md  CODEX-CAPABILITY-BASELINE.md  MACOS-TICKER-CONTRACT.md  (+5 more)
overlay/: ContextOverlay.Core.psm1  Test-ContextOverlay.ps1  Test-OverlayInstaller.ps1  context-overlay.ps1  manage-overlay.ps1  sol-1m-catalog-manifest.json  sol-1m-models.json
schemas/: capability-probe.schema.json  capability-vocabulary.schema.json  catalog-calibration.schema.json  catalog-overlay-manifest.schema.json  config-ownership-manifest.schema.json  doctor-report.schema.json  sol-catalog-overlay.schema.json  source-freeze.schema.json  startup-policy-audit.schema.json  status-report.schema.json
scripts/: ci-gitleaks.sh  ci-negative-gate.sh
src/: claim_contract.rs  config_manager.rs  doctor.rs  lib.rs  main.rs  model_catalog.rs  probe.rs  sol_launcher.rs  startup_policy.rs
tests/: architecture_boundaries.rs  capability_evidence.rs  claim_contract.rs  config_manager.rs  doctor_status.rs  governance_contracts.rs  model_catalog.rs  startup_policy.rs
(+75 files in other folders)
