[package]
name = "context-continuum"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/USS-Parks/1M-Context-Sol"
description = "Sol-only Codex context continuity runtime"
publish = false

[lib]
name = "context_continuum"
path = "src/lib.rs"

[[bin]]
name = "cctx"
path = "src/main.rs"

[dependencies]
atomic-write-file = { version = "0.3.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml_edit = { version = "0.25.13", default-features = false, features = ["display", "parse"] }

[dev-dependencies]
jsonschema = { version = "0.48.1", default-features = false }
